fix: desktop search and cart showing on mobile nav

--- a/assets/scss/elements/navigation/_nav-search.scss
+++ b/assets/scss/elements/navigation/_nav-search.scss
@@ -123,7 +123,7 @@ a.button.close-responsive-search {
   height: 100vh;
 }
 
-.menu-item-nav-search:not(.responsive-nav-search) {
+#nv-primary-navigation .menu-item-nav-search:not(.responsive-nav-search) {
   display: none;
 }
 
@@ -140,7 +140,7 @@ a.button.close-responsive-search {
     display: none;
   }
 
-  .menu-item-nav-search:not(.responsive-nav-search) {
+  #nv-primary-navigation .menu-item-nav-search:not(.responsive-nav-search) {
     display: block;
   }
 
